2009-01-24  Jürg Billeter  <j@bitron.ch>

	* vala/valaclass.vala:

	Fix type of implicit `this' parameter when using generics

2009-01-23  Jürg Billeter  <j@bitron.ch>

	* ccode/valaccodefunction.vala:
	* gobject/valaccodebasemodule.vala:
	* gobject/valaccodemethodmodule.vala:
	* gobject/valaccodemodule.vala:
	* gobject/valadbusclientmodule.vala:
	* gobject/valagasyncmodule.vala:
	* gobject/valagobjectmodule.vala:

	Refactor method parameter and result code generation

2009-01-23  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodearraymodule.vala:
	* gobject/valaccodedelegatemodule.vala:
	* gobject/valaccodemethodmodule.vala:

	Add virtual generate_parameter method. Move array and delegate type
	specific parameter generation to corresponding modules.

2009-01-20  Jürg Billeter  <j@bitron.ch>

	* vapigen/valagirparser.vala:

	Support struct methods

2009-01-20  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodebasemodule.vala:

	Do not declare public constants as `static'

2009-01-19  Jürg Billeter  <j@bitron.ch>

	* vapi/gsl.vapi:

	More fixes, patch by Matías De la Puente

2009-01-19  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodedelegatemodule.vala:

	Use correct C identifier for delegate target of static fields

2009-01-19  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodemethodmodule.vala:

	Fix assigning to properties in lambda expressions in creation
	methods, patch by Yu Feng, fixes bug 568267

2009-01-18  Thijs Vermeir  <thijsvermeir@gmail.com>

	* vapi/packages/gstreamer-0.10/gstreamer-0.10.metadata:

	Fix binding for gst_pad_chain

	* vapi/gstreamer-0.10.vapi: Regenerated

2009-01-18  Jürg Billeter  <j@bitron.ch>

	* vala/valacodecontext.vala:
	* gobject/valaccodebasemodule.vala:
	* gobject/valaccodecompiler.vala:

	Do not generate legacy header files when using -H

2009-01-18  Jürg Billeter  <j@bitron.ch>

	* configure.ac: Post-release version bump

2009-01-18  Jürg Billeter  <j@bitron.ch>

	* NEWS: update for 0.5.6 release
