@@ -1,3 +1,9 @@
+2009-01-25  Jürg Billeter  <j@bitron.ch>
+
+	* gobject/valadbusclientmodule.vala:
+
+	Support signals in static D-Bus client
+
 2009-01-24  Jürg Billeter  <j@bitron.ch>
 
 	* vala/valaclass.vala:
